PR/46579: Takahiro HAYASHI: ifconfig clone destroy should not print useless diagnostic and exit with an error code. Get the interface name and flags opportunistically to allow the code to return normally if it does not need to do anything.